feat(core,server): use override vm-template, remove vmtemplate API endpoint